CruiseControl Release Notes

Changes listed by release, then alphabetically.

CruiseControl Release Notes - Latest CVS

cruisecontrol.bat/.sh
----------------------
* Introduce CC_OPTS to easily pass arguments to VM when starting CC. Patch by Arent-Jan Banck

P4:
----------------------
* Fix problem where test would fail if Perforce was on the path. Patch by Arent-Jan Banck

CruiseControl Release Notes - 2.3

release format:
----------------------
* Add binary release that includes Jetty.

build loop
======================

Accurev:
----------------------
* Add Accurev source control and AccurevBootstrapper. Submitted by Jason Chown and Nicola Orru, patched by Jerome Lacoste

AlienBrain:
----------------------
* Add support for AlienBrain SCM. Submitted by Scott Jacobs
* Add AlienBrainBootstrapper. Submitted by Scott Jacobs

AlwaysBuilder:
----------------------
* Fixed builder to not cause an infinite loop when using a quietperiod of greater than 100 seconds. Patch by Lars Gehrken.

AntBuilder:
----------------------
* Added optional anthome attribute. Can be used in lieu of antscript to make config.xml more portable across environments and more intuitive (than antscript) for new CruiseControl users. Thanks to Paul Hammant for the idea.

AntPublisher:
----------------------
* Will now pass the property "thisbuildsuccessful" to the ant script.

contrib:
----------------------
* Add support for distributed building (CC-137). Submitted by Jeff Ramsdale, Patches by Dan Rollo
* Add RpmPackager for creating CruiseControl RPM (CC-154). Submitted by Julian Simpson.

CMSynergy:
----------------------
* Added options reconfigure, ignoreWorkarea, language, and country attributes (CC-179). Patch by Robert J. Smith
* Major overhaul of CMSynergy support (CC-217). Patch by Robert J. Smith
    - added CMSynergySessionMonitor listener
    - added CMSynergyBaselinePublisher
    - added CMSynergyTaskPublisher
    - added instance attribute to CMSynergy source control